// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — apenas cavilhas + rasgo (sem Ø5) 1`] = `
[
  {
    "face": "A",
    "x": 8,
    "y": 15,
  },
  {
    "face": "A",
    "x": 8,
    "y": 410.5,
  },
  {
    "face": "A",
    "x": 490,
    "y": 15,
  },
  {
    "face": "A",
    "x": 490,
    "y": 413.5,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 538.5,
  "bodyWidth": 548,
  "height": 718,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 1,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 244.54500000000002,
  "bodyWidth": 548,
  "height": 357,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -179.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 267.75,
  "bodyWidth": 548,
  "height": 357,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 181.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 162.11666666666667,
  "bodyWidth": 548,
  "height": 236.66666666666666,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -239.66666666666669,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 177.5,
  "bodyWidth": 548,
  "height": 236.66666666666666,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 0.9999999999999858,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 177.5,
  "bodyWidth": 548,
  "height": 236.66666666666666,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 241.66666666666663,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 120.9025,
  "bodyWidth": 548,
  "height": 176.5,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -269.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 132.375,
  "bodyWidth": 548,
  "height": 176.5,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -89.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 132.375,
  "bodyWidth": 548,
  "height": 176.5,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 91.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 132.375,
  "bodyWidth": 548,
  "height": 176.5,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 271.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;
